2009. Minimum Number of Operations to Make Array Continuous